build/log/idf_py_stdout_output_14918
[1/13] Performing build step for 'bootloader'
[1/1] cd /home/zhu/esp32/smart_surveillance/build/bootloader/esp-idf/esptool_py && /home/zhu/.espressif/python_env/idf5.3_py3.8_env/bin/python /home/zhu/esp32/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/zhu/esp32/smart_surveillance/build/bootloader/bootloader.bin
Bootloader binary size 0x5260 bytes. 0x2da0 bytes (36%) free.
[2/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/smart_surveillance.c.obj
[3/11] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/ai_detection/image_processing.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/ai_detection/image_processing.cpp.obj 
/home/zhu/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32s3-elf-g++  -DESP_PLATFORM -DIDF_VER=\"v5.3\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -Iconfig -I../main -I../main/iot -I../main/hal -I../main/common -I../main/ai_detection -I../main/ai_detection/models -I/home/zhu/esp32/esp-idf/components/newlib/platform_include -I/home/zhu/esp32/esp-idf/components/freertos/config/include -I/home/zhu/esp32/esp-idf/components/freertos/config/include/freertos -I/home/zhu/esp32/esp-idf/components/freertos/config/xtensa/include -I/home/zhu/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/zhu/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/zhu/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/zhu/esp32/esp-idf/components/freertos/esp_additions/include -I/home/zhu/esp32/esp-idf/components/esp_hw_support/include -I/home/zhu/esp32/esp-idf/components/esp_hw_support/include/soc -I/home/zhu/esp32/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/zhu/esp32/esp-idf/components/esp_hw_support/dma/include -I/home/zhu/esp32/esp-idf/components/esp_hw_support/ldo/include -I/home/zhu/esp32/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/zhu/esp32/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/zhu/esp32/esp-idf/components/heap/include -I/home/zhu/esp32/esp-idf/components/log/include -I/home/zhu/esp32/esp-idf/components/soc/include -I/home/zhu/esp32/esp-idf/components/soc/esp32s3 -I/home/zhu/esp32/esp-idf/components/soc/esp32s3/include -I/home/zhu/esp32/esp-idf/components/hal/platform_port/include -I/home/zhu/esp32/esp-idf/components/hal/esp32s3/include -I/home/zhu/esp32/esp-idf/components/hal/include -I/home/zhu/esp32/esp-idf/components/esp_rom/include -I/home/zhu/esp32/esp-idf/components/esp_rom/include/esp32s3 -I/home/zhu/esp32/esp-idf/components/esp_rom/esp32s3 -I/home/zhu/esp32/esp-idf/components/esp_common/include -I/home/zhu/esp32/esp-idf/components/esp_system/include -I/home/zhu/esp32/esp-idf/components/esp_system/port/soc -I/home/zhu/esp32/esp-idf/components/esp_system/port/include/private -I/home/zhu/esp32/esp-idf/components/xtensa/esp32s3/include -I/home/zhu/esp32/esp-idf/components/xtensa/include -I/home/zhu/esp32/esp-idf/components/xtensa/deprecated_include -I/home/zhu/esp32/esp-idf/components/lwip/include -I/home/zhu/esp32/esp-idf/components/lwip/include/apps -I/home/zhu/esp32/esp-idf/components/lwip/include/apps/sntp -I/home/zhu/esp32/esp-idf/components/lwip/lwip/src/include -I/home/zhu/esp32/esp-idf/components/lwip/port/include -I/home/zhu/esp32/esp-idf/components/lwip/port/freertos/include -I/home/zhu/esp32/esp-idf/components/lwip/port/esp32xx/include -I/home/zhu/esp32/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/zhu/esp32/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/zhu/esp32/esp-idf/components/driver/deprecated -I/home/zhu/esp32/esp-idf/components/driver/i2c/include -I/home/zhu/esp32/esp-idf/components/driver/touch_sensor/include -I/home/zhu/esp32/esp-idf/components/driver/twai/include -I/home/zhu/esp32/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/zhu/esp32/esp-idf/components/esp_pm/include -I/home/zhu/esp32/esp-idf/components/esp_ringbuf/include -I/home/zhu/esp32/esp-idf/components/esp_driver_gpio/include -I/home/zhu/esp32/esp-idf/components/esp_driver_pcnt/include -I/home/zhu/esp32/esp-idf/components/esp_driver_gptimer/include -I/home/zhu/esp32/esp-idf/components/esp_driver_spi/include -I/home/zhu/esp32/esp-idf/components/esp_driver_mcpwm/include -I/home/zhu/esp32/esp-idf/components/esp_driver_ana_cmpr/include -I/home/zhu/esp32/esp-idf/components/esp_driver_i2s/include -I/home/zhu/esp32/esp-idf/components/esp_driver_sdmmc/include -I/home/zhu/esp32/esp-idf/components/sdmmc/include -I/home/zhu/esp32/esp-idf/components/esp_driver_sdspi/include -I/home/zhu/esp32/esp-idf/components/esp_driver_sdio/include -I/home/zhu/esp32/esp-idf/components/esp_driver_dac/include -I/home/zhu/esp32/esp-idf/components/esp_driver_rmt/include -I/home/zhu/esp32/esp-idf/components/esp_driver_tsens/include -I/home/zhu/esp32/esp-idf/components/esp_driver_sdm/include -I/home/zhu/esp32/esp-idf/components/esp_driver_i2c/include -I/home/zhu/esp32/esp-idf/components/esp_driver_uart/include -I/home/zhu/esp32/esp-idf/components/vfs/include -I/home/zhu/esp32/esp-idf/components/esp_driver_ledc/include -I/home/zhu/esp32/esp-idf/components/esp_driver_parlio/include -I/home/zhu/esp32/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/zhu/esp32/esp-idf/components/esp_http_server/include -I/home/zhu/esp32/esp-idf/components/http_parser -I/home/zhu/esp32/esp-idf/components/esp_event/include -I/home/zhu/esp32/esp-idf/components/esp_http_client/include -I/home/zhu/esp32/esp-idf/components/json/cJSON -I/home/zhu/esp32/esp-idf/components/esp_wifi/include -I/home/zhu/esp32/esp-idf/components/esp_wifi/wifi_apps/include -I/home/zhu/esp32/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/zhu/esp32/esp-idf/components/esp_wifi/include/local -I/home/zhu/esp32/esp-idf/components/esp_phy/include -I/home/zhu/esp32/esp-idf/components/esp_phy/esp32s3/include -I/home/zhu/esp32/esp-idf/components/esp_netif/include -I/home/zhu/esp32/esp-idf/components/nvs_flash/include -I/home/zhu/esp32/esp-idf/components/spi_flash/include -I/home/zhu/esp32/esp-idf/components/esp_partition/include -I/home/zhu/esp32/esp-idf/components/esp_timer/include -I/home/zhu/esp32/esp-idf/components/pthread/include -I../managed_components/espressif__esp-tflite-micro -I../managed_components/espressif__esp-tflite-micro/third_party/gemmlowp -I../managed_components/espressif__esp-tflite-micro/third_party/flatbuffers/include -I../managed_components/espressif__esp-tflite-micro/third_party/ruy -I../managed_components/espressif__esp-tflite-micro/third_party/kissfft -I../managed_components/espressif__esp_new_jpeg/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy   -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -Og -fno-shrink-wrap -fmacro-prefix-map=/home/zhu/esp32/smart_surveillance=. -fmacro-prefix-map=/home/zhu/esp32/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -mfix-esp32-psram-cache-issue -DTF_LITE_STATIC_MEMORY -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/ai_detection/image_processing.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/ai_detection/image_processing.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/ai_detection/image_processing.cpp.obj -c ../main/ai_detection/image_processing.cpp
../main/ai_detection/image_processing.cpp: In function 'bool process_and_detect_fire(uint8_t*, size_t)':
../main/ai_detection/image_processing.cpp:100:31: error: 'get_latest_temperature' was not declared in this scope; did you mean 'current_temperature'?
  100 |     int current_temperature = get_latest_temperature();
      |                               ^~~~~~~~~~~~~~~~~~~~~~
      |                               current_temperature
[4/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/ai_detection/get_image.c.obj
[5/11] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/ai_detection/fire_detector.cpp.obj
ninja: build stopped: subcommand failed.
